--- a/UITemplate/Bill.xaml
+++ b/UITemplate/Bill.xaml
@@ -5,10 +5,13 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:UITemplate"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800" Loaded="UserControl_Loaded">
     <Grid>
         <TextBlock Margin="10,10,10,0" Text="TextBlock" VerticalAlignment="Top" TextAlignment="Center" FontSize="24"/>
-        <DocumentViewer/>
+        <DatePicker Name="mainDatePicker" Margin="10,45,318,380" CalendarOpened="DatePicker_CalendarOpened" CalendarClosed="MainDatePicker_CalendarClosed"/>
+        <DatePickerTextBox Margin="10,75,318,350"/>
+
+        <!--<DocumentViewer/>-->
 
     </Grid>
 </UserControl>
