--- a/CompeteBase/Mis/MisControls/Navigator.xaml
+++ b/CompeteBase/Mis/MisControls/Navigator.xaml
@@ -5,10 +5,10 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Compete.Mis.MisControls"
              mc:Ignorable="d" d:DesignWidth="300" Height="22">
-    <UserControl.DataContext>
-        <local:NavigatorViewModel/>
-    </UserControl.DataContext>
-    <StackPanel Orientation="Horizontal">
+    <StackPanel x:Name="MainStackPanel" Orientation="Horizontal">
+        <StackPanel.DataContext>
+            <local:NavigatorViewModel/>
+        </StackPanel.DataContext>
         <Button Name="FirstButton" Command="{Binding FirstCommand}">
             <Image Source="/CompeteBase;component/Assets/Images/First.png"/>
         </Button>
