--- a/UITemplate/Bill.xaml
+++ b/UITemplate/Bill.xaml
@@ -9,7 +9,7 @@
     <Grid>
         <TextBlock Margin="10,10,10,0" Text="TextBlock" VerticalAlignment="Top" TextAlignment="Center" FontSize="24"/>
         <DatePicker Name="mainDatePicker" Margin="10,45,318,380" CalendarOpened="DatePicker_CalendarOpened" CalendarClosed="MainDatePicker_CalendarClosed"/>
-        <DatePickerTextBox Margin="10,75,318,350" Text="{Binding aaa, Mode=TwoWay}"/>
+        <DatePickerTextBox Margin="10,75,318,350" Text="{Binding aaa, Mode=TwoWay}" IsEnabled="True"/>
         <DataGrid d:ItemsSource="{d:SampleData ItemCount=5}" Margin="10,105,10,10">
             <DataGrid.Columns>
                 <DataGridTextColumn>
@@ -20,6 +20,7 @@
                 </DataGridTextColumn>
             </DataGrid.Columns>
         </DataGrid>
+        <GroupBox Header="GroupBox"/>
 
         <!--<DocumentViewer/>-->
 
