--- a/CompeteMis/Languages/zh-CN.xaml
+++ b/CompeteMis/Languages/zh-CN.xaml
@@ -9,6 +9,7 @@
     <s:String x:Key="OKButton">确定(_O)</s:String>
     <s:String x:Key="CancelButton">取消(_C)</s:String>
     <s:String x:Key="WaitMessage">请等待程序运行……</s:String>
+    <s:String x:Key="ClearButton">清</s:String>
 
     <!--异常消息-->
     <s:String x:Key="Exception.DataCannotSubmit">数据不能正确提交。</s:String>
@@ -105,6 +106,11 @@
     <s:String x:Key="Message.ProeceiptAmountSignError">【预收入金额】的符号必须与【未收入金额】一致。</s:String>
     <s:String x:Key="Message.DiscountReceiptAmountSignError">【折扣收入金额】的符号必须与【未收入金额】一致。</s:String>
     <s:String x:Key="Message.SameWareroomError">【出库仓库】不能与【入库仓库】相同。</s:String>
+    <s:String x:Key="Message.AccountCodeLengthError">【科目代码】必须等于本级代码长度。</s:String>
+    <s:String x:Key="Message.LowestLevelError">已经为最下级，不能再添加子。</s:String>
+    <s:String x:Key="Message.AmountZero">金额不能为零。</s:String>
+    <s:String x:Key="Message.DebitCreditNotEqualError">借贷金额必须相等。</s:String>
+    <s:String x:Key="Message.NoAmountError">借贷金额不能都为0。</s:String>
 
     <!--插件-->
     <s:String x:Key="QueryButton">查询(_Q)</s:String>
@@ -116,5 +122,7 @@
     <s:String x:Key="PrintPreviewButton">打印预览(_v)</s:String>
     <s:String x:Key="AuditButton">审核(_u)</s:String>
     <s:String x:Key="KeepButton">记账(_K)</s:String>
+    <s:String x:Key="AddChildButton">新增子项</s:String>
+    <s:String x:Key="DeleteChildButton">删除子项</s:String>
 
 </ResourceDictionary>
