--- a/UITemplate/MainWindow.xaml
+++ b/UITemplate/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:controls="clr-namespace:Compete.Mis.MisControls;assembly=CompeteBase"
         xmlns:local="clr-namespace:UITemplate"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800" WindowStartupLocation="CenterScreen">
     <Window.DataContext>
         <local:MainViewModel/>
     </Window.DataContext>
