--- a/UITemplate/Bill.xaml
+++ b/UITemplate/Bill.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:UITemplate"
+             xmlns:plugins="clr-namespace:Compete.Mis.Plugins;assembly=CompeteBase"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800" Loaded="UserControl_Loaded">
     <Grid>
@@ -20,7 +21,12 @@
                 </DataGridTextColumn>
             </DataGrid.Columns>
         </DataGrid>
-        <GroupBox Header="GroupBox"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="558,45,0,0" VerticalAlignment="Top">
+            <Button.CommandParameter>
+                <plugins:PluginCommandParameter CommandAuthorition="Add"/>
+            </Button.CommandParameter>
+        </Button>
+        <!--<GroupBox Header="GroupBox"/>-->
 
         <!--<DocumentViewer/>-->
 
