--- a/CompeteMis/App.xaml
+++ b/CompeteMis/App.xaml
@@ -5,9 +5,9 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="pack://siteOfOrigin:,,,/Languages/zh-CN.xaml" />
                 <ResourceDictionary Source="/PresentationFramework.Aero, Version=8.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35;component/themes/aero.normalcolor.xaml" />
                 <!--<ResourceDictionary Source="/PresentationFramework.AeroLite, Version=8.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35;component/themes/aerolite.normalcolor.xaml" />-->
+                <!--<ResourceDictionary Source="pack://siteOfOrigin:,,,/Languages/zh-CN.xaml" />-->
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
