--- a/CompeteBase/Mis/MisControls/EntitySelectDialog.xaml
+++ b/CompeteBase/Mis/MisControls/EntitySelectDialog.xaml
@@ -7,7 +7,7 @@
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         xmlns:local="clr-namespace:Compete.Mis.MisControls"
         mc:Ignorable="d"
-        Title="EntitySelectDialog" Height="488" Width="868" WindowStartupLocation="CenterScreen" Icon="/CompeteBase;component/Assets/Images/Select.png">
+        Title="EntitySelectDialog" Height="450" Width="800" WindowStartupLocation="CenterScreen" Icon="/CompeteBase;component/Assets/Images/Select.png">
     <!--<Window.DataContext>
         <local:EntitySelectViewModel/>
     </Window.DataContext>-->
@@ -31,7 +31,7 @@
         <local:Navigator Margin="10,0,0,11" VerticalAlignment="Bottom" CurrentPageNo="{Binding CurrentPageNo,Mode=OneWayToSource}" PageSize="{Binding PageSize,Mode=TwoWay}" RecordCount="{Binding RecordCount}" CurrentPageNoChangedCommand="{Binding RefreshCommand}" PageSizeChangedCommand="{Binding RefreshCommand}"/>
         <TextBlock HorizontalAlignment="Left" Margin="220,0,0,17" TextWrapping="Wrap" Text="{DynamicResource EntitySelectDialog.FilterTextBlock}" VerticalAlignment="Bottom"/>
         <xctk:WatermarkTextBox Margin="249,0,330,11" TextWrapping="Wrap" Text="{Binding Filter,Mode=OneWayToSource}" VerticalAlignment="Bottom"/>
-        <Button Content="{DynamicResource EntitySelectDialog.RefreshButton}" HorizontalAlignment="Right" Margin="0,0,250,12" VerticalAlignment="Bottom" Width="75" IsDefault="True" Command="{Binding RefreshCommand}"/>
+        <Button Content="{DynamicResource RefreshButton}" HorizontalAlignment="Right" Margin="0,0,250,12" VerticalAlignment="Bottom" Width="75" IsDefault="True" Command="{Binding RefreshCommand}"/>
         <Button Content="{DynamicResource EntitySelectDialog.ClearButton}" HorizontalAlignment="Right" Margin="0,0,170,12" VerticalAlignment="Bottom" Width="75" Visibility="{Binding ClearButtonVisibility}" Command="{Binding ClearCommand}"/>
         <Button Content="{DynamicResource OKButton}" HorizontalAlignment="Right" Margin="0,0,90,12" VerticalAlignment="Bottom" Width="75" IsDefault="True" Command="{Binding OkCommand}" CommandParameter="{Binding RelativeSource={RelativeSource Self}}"/>
         <Button Content="{DynamicResource CancelButton}" HorizontalAlignment="Right" Margin="0,0,10,12" VerticalAlignment="Bottom" Width="75" IsCancel="True"/>
